# flux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/flux-app/: Cargo.toml  build.rs
crates/flux-app/src/: app.rs  config.rs  logging.rs  main.rs  platform.rs
crates/flux-app/src/app/: clipboard.rs  display.rs  initialize.rs  keyboard.rs  layout.rs  mod.rs  mouse.rs  popup.rs  scroll.rs  terminal_events.rs
crates/flux-input/: Cargo.toml
crates/flux-input/src/: autocomplete.rs  editor.rs  history.rs  keybindings.rs  keymap.rs  lib.rs
crates/flux-renderer/: Cargo.toml
crates/flux-renderer/src/: atlas.rs  buffer.rs  cell_renderer.rs  core.rs  glyph.rs  gpu.rs  gpu_resources.rs  input_chrome.rs  lib.rs  output.rs  pipeline.rs  render_pass.rs  renderer.rs  selection.rs  ui.rs  ui_renderer.rs
crates/flux-renderer/src/atlas/: measure.rs  raster.rs  region.rs  style.rs  texture.rs
crates/flux-renderer/src/core/: buffer.rs  gpu.rs  pipeline.rs  resources.rs  types.rs
crates/flux-renderer/src/ui/: input_bar.rs  popup.rs
crates/flux-shell/: Cargo.toml
crates/flux-shell/resources/: flux-bootstrap.zshenv  flux-integration.bash  flux-integration.fish  flux-integration.zsh
crates/flux-shell/src/: bash.rs  fish.rs  history.rs  integration.rs  lib.rs  zsh.rs
crates/flux-terminal/: Cargo.toml
crates/flux-terminal/src/: blocks.rs  lib.rs  pty.rs  state.rs
crates/flux-types/: Cargo.toml
crates/flux-types/src/: lib.rs  selection.rs  theme.rs
resources/: default-config.toml
resources/shaders/: cell.wgsl
